# servoflow

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.bench  README.md  docker-build.sh  download_model.py  test_cuda.py
benchmarks/: bench_attention.cu  bench_hf_rdt1b.py  bench_manual_rdt1b.py  bench_pipeline.cpp  run_comparison.sh
docs/: RDT1B_ALIGNMENT_PROGRESS.md  RDT1B_ARCHITECTURE.md  business_plan.md  competition_pitch.md  servoflow_bp_draft.html
examples/: CMakeLists.txt  rdt1b_inference.cpp
include/servoflow/backend/: backend.h
include/servoflow/backend/cuda/: cuda_backend.h
include/servoflow/engine/: inference_engine.h
include/servoflow/loader/: safetensors.h
include/servoflow/models/rdt1b/: config.h  dit_block.h  rdt1b.h
include/servoflow/sampling/: sampler.h
src/backend/cuda/: cuda_backend.cu  flash_attn_adapter.cu
src/backend/cuda/flash_attn/: flash.h  flash_api.h  flash_fwd_launch_template.h  philox_unpack.cuh
src/backend/cuda/ops/: attention.cu  elementwise.cu  elementwise.cuh  quantization.cu  quantization.cuh  split_ops.cuh
src/engine/: inference_engine.cpp
src/loader/: safetensors.cpp
src/models/rdt1b/: config.cpp  dit_block.cpp  dit_block.cu  rdt1b.cpp
src/sampling/: flow_matching.cpp
tests/: CMakeLists.txt
tests/alignment/: align_rdt1b  align_rdt1b.cpp  bench_rdt1b_kernel.cpp  docker_align_rdt1b.sh  run_rdt1b_align_manual.py  test_rdt1b_alignment.py  test_rdt1b_load.cpp
tests/unit/: test_quantization.cpp
tools/convert/: hf_to_servoflow.py
